# CO2Calculator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
backend/: CMakeLists.txt
backend/include/: APIClient.h  CO2Calculator.h  DataProvider.h  DataStorageManager.h  EntsoeParameterManager.h
backend/src/: APIClient.cpp  CO2Calculator.cpp  DataProvider.cpp  DataStorageManager.cpp  EntsoeParameterManager.cpp  main.cpp
database/: DB_CO2Calc.db  createDb.sql
frontend/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
frontend/include/: mainwindow.h
frontend/src/: mainwindow.cpp
include/: APIClient.h  CO2Calculator.h  DataStorageManager.h  EntsoeParameterManager.h
src/: APIClient.cpp  CO2Calculator.cpp  DataStorageManager.cpp  EntsoeParameterManager.cpp  main.cpp
